--- a/css/main-css style.css
+++ b/css/main-css style.css
@@ -300,7 +300,7 @@ header .container nav+.search-form i {
 
 /* start section-landing-1 */
 main .landing {
-    background-image: url(/imgs/wallpaperbetter.com_7680x4320.jpg);
+    background-image: url(https://lh3.googleusercontent.com/hmOOkbhl0AAgl_cGpkDBsAw5Q4dFdtHXaN94z35ZmS6vMK-47MGK5pmt9fGTmiEnIOf-nK8caZncfI_sec3IvzJGGzkdM4gwVT79TVvCMEPm0cKWj90edNVDjkwHgQqrNrhoG8z3ogNJfA0XBc_cVhPCKf7cyhIeti1GMMeDA55XDA6ppR6NiRnyGMpyAX8wfc8_7AN88qivwgulNAFgcDVMBaI8SkSafchRT5RUqVR65GJU7u0Vs7yfOVfp1et8Dy-J9iupR2KClmyArTB9u-qBHCinXGylkC6NEy-_n6ZLj5XKXDPVH0WNWBoXDu07FzxTQr-8w-LxuBnl9emizUzoUQoffGZP-cSTKyqxkM0Ce8uybYykInJSYBcwEbSizVLeTaHC76vdERUIOjuXR2ww_fzcDaafioG17J519mBUuOKMe5mOR9ouHvR8MPUhBo-sDZt63t2nUekjcNeEAAFigjGXtOI7lWxtwtf3WvlXaJJjn9_cXRvubrlmi63ux6TSNKs8QwU8JrS9L43Lhz_gTLbSVIImKqDP1eVCw6nJTLYQxEUu_kqNH1YQEomySjRnIZcnQP_5pJRUU50FjQzTy5g6P1l4DALWpy7DHR30Nmv2XHcQIMis7TFQIUrjc-tgSGwNPd3qHpndOn_urXsKwgGE5mDQjo3LxY2Ywx5SrxhBoyKQILWocr9ipvdF0LRFVcUA7gFtgTywx2jiE-HtAMQNK8IJn3E7BL4Puleh35PsR1pEMshXTMNKh-rtTp8hgV9-B_hoypK4i-x1KBx6lCHIIs1K9hQO87lJsmWQvuKoRgxYnFi5SAzwI-SyTHl1aI50mURuxb2kcOppTBQt8Q4Vw8v_HlYX3TSvPYZHy_NkvQr2Ybezdyy_Ui2pUwYjFFdNgid7ePk3aaQgi8MRkshOP8ENZuCOaYQPjzUK06XHB1j8B5w4d4Vv0TnQ13jR0fGwGtlyaieOr9X5=w2200-h1238-s-no?authuser=0);
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -548,7 +548,7 @@ main .landing ul li {
 .mobile {
     width: 100%;
     height: 600px;
-    background-image: url(/imgs/5d8fa6aa2738e.jpg);
+    background-image: url(https://lh3.googleusercontent.com/QC_AzCsLJ0jLYJ_nvL_tIbiN7gp-X5HUNp1qEb7LGNHdkX0L0QOfuFf75HfcgoUKOkNDY3Slt6sY3ifbsUUZ3nNf1wsbr-di8HhopBF5u5cG0FL5qm5UiF6mOnq7aCvQxMCgkMeldp81Rgk39_1gahg96AWTU1-4V8IiIYHrQeaSvhT-ZuFWzKSsoR_RJMsWt-kDCU10jfbIShvaGeC-cYlervDYze-UN7MnBK48BrRWpdVBZuVXhXmOuxUuOJzGM2AuwfwxjNKnPy133fC2ABzSckM9lBVUXh91YaxLPX5bACXLzknmi_Fkv25Ji0oXLDMrkjggalIPNqCRY9c-LTHbCSoDPrelGTIJrb31zFwVtL0oi3mh1gprmr7KuKgN9z8-vHi1IHqhtyD1NtQTZmhtoGQSpEvByum45oEH6pVrxTxjnibwxUiZKbuimJxQybcAWBD9stoGATscXKTL6cdEcUMlATJ5kGSdYbFJlXaZI49xlITXnhbp3kF31WnHZCRohLxCT_B-J8EnwM0pWvtTeRrdT_kniBPY7BKgjbckOvt9FvldyCRTV1CPLDKJhz4pjVVoD4MAf3ilSOD8zt2rp-lycE8j5nQuD7WE70ZvxGAHCsf31MVNYejVhaqwt4yZC99KVtoVGaJ8eciQpHFuKH0FqLpCWmCo5ffoSiQVMnY4UJl2BQW3lEOA_F8I2uAedIgMZFUfeyesjQkoeNCYi9l9j1mNUfj-zg57Cel8yqglsUq2DVkWMtciF1BRr2qpU6j1ycPyNFoo6srj00J4GEi8jEwTy0_WYy_QoBa0vEJaYpClSY1vspvkDRGx5HXwnivz_D5xiJh0rNz9TjMJIc5jPKulyg4F0qCczdpuK1C1TopRkNYUXfsvfsKIqQPvLLNEIXT6ZaTUD9Ha_CakZskELuEk07e4CeFhpUP4F4kfKV7j-_mFjozeg9sOob0aorO-Mu5or8fiKBKm=w2200-h1100-s-no?authuser=0);
     background-size: cover;
     position: relative;
     margin-bottom: 150px;
@@ -875,7 +875,7 @@ main .mobile::after {
 .about .stats {
     width: 100%;
     min-height: 463px;
-    background-image: url(/imgs/pexels-photo-139312.jpeg);
+    background-image: url(https://lh3.googleusercontent.com/gMFMfPkRG-1MYcZqh8euzJ6hqRI8E3PGraKNxBO2FcocTOPStrPilHZ663dCoa6BQwBVX6E9p5-d_urdPcUkVIoYckyGiG-yVdkdP3O1We6z6pI01jxoaVi0H_JuCJpCYXhZzt7mAyFoFfL0fle9FyNNEAMZ1hlHAtCXeI7DR2DWlr_xswGMXrtB2xi9zd6-ypMcCSZPpBh3Q95_qSRkV9VHCcJT1de0xjvVbUnH2HFo6nHHpfreNO8-KfItJ-XJOTL7FgEBjFGbiYT2uwf5EAZ7CIrJOyppSnEZYI7qAe_OK43dZ0QQ0Mz0gM9YLlfPWVJeliRem0-B1FvsXciQGBSLfS_uuaBRbvjppqnjbvD2LByogLZ8jUp7foQq1ZY4OIsp1zEsjB1FjtBjVpurJn3aKJ5Q5Sm56RWQAZhoKDermHmLOzi4TKBuuJ-7WT61e97rFJrxQAhh1npt5MNMVeeEcXHHx9DWqoTfneRQJnNCCybbyL4-UEwlTKBTC1XmoKOeaohoIH6rR5_Bjk_oVcWR67y7fo8drcXlAJBo66Vrb_DgAGdYfnPtyE7r0OtsrCxw7JSf-rRSgYRt7Ehwo1KKXrZBwpK0pXey0z6apBbLJIsUp05uZdlJZh194lvgHwMaWgTlupCWP5Du-mZ9CgjUkGTB82ugug_84cQKrKflnYtdxRoa9q5Lf2z0YK4c03XEeJKfoqJuh2TzGqvPeeub-SxoSI0uWyHXpJBfgBBVcQvNbaSdQlZQkoo5XsuamiLmeGhXRh3ZULNShUjdbnIobXEFiuG_LF62bwUG_hId3joO4zBfqhtF1nbH7cAYy_JAALGoPmR7oSYeMMiga8ZwxSiArtUBG93ITY60lhLyqeAwnMSdk57un4lpDfMCrmC-zuFstEiav0_msswt38BFaLFo2DSnGyyLkrBlcnW8296xOr2LWEOdBsLAh79_9OrXJqra-5UvJiEvXHqB=s250-k-rw-no);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 100px 0;
@@ -1141,7 +1141,7 @@ main .mobile::after {
     height: fit-content;
     min-width: 100%;
     max-height: 307px;
-    background-image: url(/imgs/instagram-hex-cadient-background.png);
+    background-image: url(https://lh3.googleusercontent.com/Fxe2niSlg0YpWAIPpm8xKfc1sy4zgvkuI2c3tC6MCGStvKfaj8LVFejxbWgx-BEUKUmEP3-JzWqN0pEEPoJL4C9OcU_VNWdyilE3HK8kGEYwuw2qfHtHf6CW9fSNyVYp2MlD86zVFU1yr9vmSmH-PCtxIW24nSn8462JdNRi0btqdSK_3P-2mhz9gULVDRMxMMKoD3awyyeZnM0l1TR3EYa8pOe3yijcBmp6M2qeYgKZqo4LCwsgjVRNPOUFoLoceH_L8K-OzBmm6EOE_SnTwDraLJ-U562ngt2jjAv5_E4H_nngapHZ0XR6Iz8RHmEzwdLz0lDXla6GarGniggDOrk4qM2KecV4baUclIY8yRZPXveX6GAQZjNm0DXA0aesKa-W5vBOB7BPyA9kOFPobquLyOytTu-PgVuvz1HD-D9vsWLrJOPH6hOx0Ufy_pyvjyVyklmjTHsdCBIhItUzyhZUEWB36GebDyOa81R7x7lvx7xCQX7_HntbBUsR8dNDtN2YLf57SkuXBlJTqE6UeekL8qcnYqAoodsN5qnMaYBTdHk43QcKQQ4IyM8lY_FvQgsWyRcyyNVlozOgKX_IUUTl8hTIhXriIvn2VEYlOP2wpZ-FdLXd33CFTzAu-GHqtvcEVBWxNSeHU0RwuL6ELPFsaGfqUBycmdkVqG_gjsWRg7odpm8o7ZBjArXLaSNEequaSk9ZlPsLN9c8dqUptrSazTmKmKfYiTGaDVMiYmVAqp_shIyojWCpb-bFPw0K5RNCJi-8qaNd5Wg3fYOfzzVzsKeXqGBCASZY9upW71-H6j5XzPKqk7eVYM8utb5DJ09rUmconNqQUh4-i8-mqA6WOpbuRc6GNwU22-f1sV2LWyV7BBLtwIEOT4fJyRmCgyjFraf0Mbw1mXQ-oVb27Y_hMfUQ0gOPC845ymNr_FSfz5GSeru9lGoMW6Kjc7QWpURS7ns473PU5AoWP7FC=w1920-h526-s-no?authuser=0);
     background-size: cover;
 }
 
@@ -1325,7 +1325,7 @@ main .mobile::after {
 .subscribe {
     width: 100%;
     margin-bottom: var(--main-section-margin-bootm);
-    background-image: url(/imgs/—Pngtree—purple\ flat\ space\ planet\ banner_1101832.jpg);
+    background-image: url(https://lh3.googleusercontent.com/MC4rBpNBeV5fgFRpv37XKnN3eBPre-XBCjtv9Ra9-Ts5WiKJnl7mDR34qaT2acFDp0TkxboPGl16OxIB8kT4fABYmfwnWwre111LgZcp9MI_71ssfEY225xItKDtRBHzYFv_Z-aiOT2m8qZc6Z7CG2qXrLBd1HMwPqxUq667Kb4LvXGuuCwhk3QZLdyWrMjFqz5ZLKTPtvq7MQnGifeS9el19f8vsIOCX8RjrRq6H5KlTA0AWnb3tPMQOr2gdOLRyN24oOg46WUqSIPL-aLmIBJ2dyFMhnGStNn9890YuiQrCrIL-_2zD4xTfdxYz6eugKdeCuAshtEqEvT9dLBSiO2hzPJMGfB-2TyGPY78WeaYDKzMfunItR2LbLkVYKB8BirlcHBcCmiI6kmR9FWAvM1Ni8uK5wIXRe5PNTW9SSjkyzBpvEdRy319_1F2dg7cXFOVCU4jMbtij40d8cTtPza5K9ArxCWmjH9WwtGVc99e7zqFmSdjFUHYeTNWPOi_5cj3Y25EVsQeXSCaeedPbk4RR6gz972U8QOqXf64BYX9tOuULEa55Vbh8MSspA3PUpK_Gu9o9SwrqHxDHeXNJBGmpcfx6i5tm7I-GXYiO8QlSIDPNy3v_0XrnJ0TRtDnxYlxdA0F3TfkRGNbXT8PXQrJnK-5MWStxrhf4co7ynL4uNAb3ThwrfrSGOg6hq0UiuXaB1nONOYfAVdl2BtVkO_pyMqeBlCOIfNdNhu9z-eo7RVWnjUiIQjhzsnoMvvbDERIHPN9HuQQJVIFamTR2qYzyeHdch2us3QgPG6oaHR4L1xhw3Cu37qsOhLtNgzi9QIoIf0cM3Cg8CXdPj04MGbrg-cFRWetdEvpgElD7CJP8DmpFqmC7gj_SiNeZrdneRW-GVWBIysi9vPhQFtpqyVuh-W0mmqutwetA8pBJ7Pg2ueJsCblno5O9jsNxx50yPvn5JRFe9s50tSevmKs=w1920-h700-s-no?authuser=0);
     background-size: cover;
     position: relative;
 }
@@ -1497,7 +1497,7 @@ outline: none;
  footer {
     max-width: 100%;
     height: fit-content;
-    background-image: url(/imgs/—Pngtree—purple\ flat\ space\ planet\ banner_1101832.jpg);
+    background-image: url(https://lh3.googleusercontent.com/MC4rBpNBeV5fgFRpv37XKnN3eBPre-XBCjtv9Ra9-Ts5WiKJnl7mDR34qaT2acFDp0TkxboPGl16OxIB8kT4fABYmfwnWwre111LgZcp9MI_71ssfEY225xItKDtRBHzYFv_Z-aiOT2m8qZc6Z7CG2qXrLBd1HMwPqxUq667Kb4LvXGuuCwhk3QZLdyWrMjFqz5ZLKTPtvq7MQnGifeS9el19f8vsIOCX8RjrRq6H5KlTA0AWnb3tPMQOr2gdOLRyN24oOg46WUqSIPL-aLmIBJ2dyFMhnGStNn9890YuiQrCrIL-_2zD4xTfdxYz6eugKdeCuAshtEqEvT9dLBSiO2hzPJMGfB-2TyGPY78WeaYDKzMfunItR2LbLkVYKB8BirlcHBcCmiI6kmR9FWAvM1Ni8uK5wIXRe5PNTW9SSjkyzBpvEdRy319_1F2dg7cXFOVCU4jMbtij40d8cTtPza5K9ArxCWmjH9WwtGVc99e7zqFmSdjFUHYeTNWPOi_5cj3Y25EVsQeXSCaeedPbk4RR6gz972U8QOqXf64BYX9tOuULEa55Vbh8MSspA3PUpK_Gu9o9SwrqHxDHeXNJBGmpcfx6i5tm7I-GXYiO8QlSIDPNy3v_0XrnJ0TRtDnxYlxdA0F3TfkRGNbXT8PXQrJnK-5MWStxrhf4co7ynL4uNAb3ThwrfrSGOg6hq0UiuXaB1nONOYfAVdl2BtVkO_pyMqeBlCOIfNdNhu9z-eo7RVWnjUiIQjhzsnoMvvbDERIHPN9HuQQJVIFamTR2qYzyeHdch2us3QgPG6oaHR4L1xhw3Cu37qsOhLtNgzi9QIoIf0cM3Cg8CXdPj04MGbrg-cFRWetdEvpgElD7CJP8DmpFqmC7gj_SiNeZrdneRW-GVWBIysi9vPhQFtpqyVuh-W0mmqutwetA8pBJ7Pg2ueJsCblno5O9jsNxx50yPvn5JRFe9s50tSevmKs=w1920-h700-s-no?authuser=0);
     background-size: cover;
     padding: 100px 0;
     position: relative;
